# ChangeLog for media-libs/imlib
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/imlib/ChangeLog,v 1.66 2008/07/05 08:51:28 loki_val Exp $

  05 Jul 2008; Peter Alfredsen <loki_val@gentoo.org> imlib-1.9.15-r2.ebuild:
  Fix for libtool-2.2 wrt bug #213805. Thanks to all the people on that bug.

  14 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  imlib-1.9.15-r2.ebuild:
  ppc stable, bug #201887

  14 Dec 2007; Markus Rothe <corsair@gentoo.org> imlib-1.9.15-r2.ebuild:
  Stable on ppc64; bug #201887

  14 Dec 2007; <welp@gentoo.org> imlib-1.9.15-r2.ebuild:
  Stable on amd64; bug 201887

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> imlib-1.9.15-r2.ebuild:
  alpha/ia64 stable wrt security #201887

  13 Dec 2007; Jeroen Roovers <jer@gentoo.org> imlib-1.9.15-r2.ebuild:
  Stable for HPPA (bug #201887).

  13 Dec 2007; Ferris McCormick <fmccor@gentoo.org> imlib-1.9.15-r2.ebuild:
  Sparc stable, Security Bug #201887.

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  imlib-1.9.15-r2.ebuild:
  stable x86, security bug 201887

*imlib-1.9.15-r2 (10 Dec 2007)

  10 Dec 2007; <pva@gentoo.org>
  +files/imlib-1.9.15-bpp16-CVE-2007-3568.patch,
  +files/imlib-1.9.15-fix-rendering.patch, +imlib-1.9.15-r2.ebuild:
  Fixed denial of service (infinite loop) via a BMP image, bug #201887. Fixed
  bug which prevented imlib to render images is MIT-SHM when the MIT-SHM
  extension doesn't support shared pixmaps (bugs.debian.org/448360). Thank for
  report Antti Mäkelä <zarhan AT cs.tut.fi>. Homepage changed. No website is
  available for this old library, so pointing to sources location.

  23 Sep 2007; Samuli Suominen <drac@gentoo.org> imlib-1.9.15-r1.ebuild:
  Fix modular X deps wrt #192733.

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> imlib-1.9.15-r1.ebuild:
  Stable on mips, per #172638.

  14 Jun 2007; Samuli Suominen <drac@gentoo.org> imlib-1.9.15-r1.ebuild: