@@ -3,7 +3,6 @@ AUX imlib-1.9.15-fix-rendering.patch 3263 RMD160 2ec2c9bb864d64b588d3b786e9b256f
 AUX imlib-1.9.15.patch 2253 RMD160 beb86753cc2024a9eb671acdc3886b7a5692b526 SHA1 29fb949680e5b2d95392b4c5efd1fdfa21f2df3d SHA256 43dd12dae7913475f968f35a4fa4b1ef4670451e58c712cbd6e5460f20fc9197
 AUX imlib-security.patch 13040 RMD160 432377938bd85f9974bff8f08aca6d93d310057c SHA1 ec1b47281c1a7fb21abe841f948ecc56ed13f310 SHA256 d67a7faa2dba8d361cf25b6fc8125c1da92f25b612bffe909daacdeda577dd57
 DIST imlib-1.9.15.tar.bz2 683242 RMD160 195b80833167134ba2d9a9574d420279f9cf55f4 SHA1 c9a732a354fbb3c7e1a426e5d19fc92d73f8f720 SHA256 4e6a270308a9ae16586bfc133c1a3dfb2e56f431edb66aaa3a80e36e5ed84ce0
-EBUILD imlib-1.9.15-r1.ebuild 1371 RMD160 3b5fe868af1ab3b2153b7446bf5a04db278376d7 SHA1 4aedfe11f5561b756a0dbbbb9f1c9d7ba0534f21 SHA256 54eeffd491c99b53e6d4a75990ddbb75e4a3999e9db71c432a0821cb5e7f885b
 EBUILD imlib-1.9.15-r2.ebuild 1514 RMD160 cd91380623158878043b34d9f3255548c0293515 SHA1 990d51a0745e7eef2ff69e79971ad4d099c0849d SHA256 919ab32a31a8d2c33fac821e69867dad4c93a3ab68ac88d5bf68a06358244d52
-MISC ChangeLog 9054 RMD160 3099c82a92846ddef42dfb26bc8071eca7f4fead SHA1 b107d629127b9ac6866ed46dc6d97ab1556656e3 SHA256 b27a61e7f5872a60812d26fd67fe89ca2b3498b8b90ed10bde84b560ab6f22da
+MISC ChangeLog 9147 RMD160 2ab9ee2cb5d0aece1780e2dd27a879133ddb5271 SHA1 96c9fa3bfc06f6460d53ac09065744085162bee9 SHA256 aa099fffaef194ea78587da128bb0371a8c06fcbe6361c035f63f3ea84c9f81d
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
