@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/imlib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/imlib/ChangeLog,v 1.66 2008/07/05 08:51:28 loki_val Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/imlib/ChangeLog,v 1.67 2008/07/05 08:53:05 loki_val Exp $
+
+  05 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
+  -imlib-1.9.15-r1.ebuild:
+  Drop old.
 
   05 Jul 2008; Peter Alfredsen <loki_val@gentoo.org> imlib-1.9.15-r2.ebuild:
   Fix for libtool-2.2 wrt bug #213805. Thanks to all the people on that bug.
